--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,56 @@
-/* You can add global styles to this file, and also import other style files */
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+:is(h1, h2, h3, h4, h5, h6) {
+  font-weight: 400;
+}
+
+* {
+  padding: 0;
+  margin: 0;
+  border: 0;
+}
+
+:focus,
+:active {
+  outline: none;
+}
+a:focus,
+a:active {
+  outline: none;
+}
+
+a,
+a:visited {
+  text-decoration: none;
+}
+a:hover {
+  text-decoration: none;
+}
+ul li {
+  list-style: none;
+}
+
+body {
+  color: #434e74;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  max-width: 1000px;
+  margin: 0 auto;
+  background-image: url(./assets/images/bg_img.png);
+  background-color: #ae8fb1;
+}
+
+.main__container {
+  padding: 10px 30px;
+  font-size: 18px;
+  line-height: 1.25;
+}
+
+h1 {
+  font-size: 32px;
+  margin: 10px 0 20px 0;
+  text-align: center;
+}
