feat/layout(layout): add wiki and about pages

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,8 +6,8 @@
   <nav>
     <a routerLink="home" class="nav__link">Главная</a>
     <a routerLink="news" class="nav__link">Новости</a>
-    <a href="" class="nav__link">Вики</a>
+    <a routerLink="wiki" class="nav__link">Вики</a>
     <a routerLink="feedback" class="nav__link">Обратная связь</a>
-    <a href="" class="nav__link">О разработчиках</a>
+    <a routerLink="about" class="nav__link">О разработчиках</a>
   </nav>
 </header>
