--- a/src/app/common/news/news-item/news-item.component.html
+++ b/src/app/common/news/news-item/news-item.component.html
@@ -1,13 +1,15 @@
-<div class="news__container">
+<div>
   <div class="news__image__container">
     <a href="news1.html">
-      <img src="../../../../assets/images/news_01_01.jpg" alt="" class="news__image" />
+      <img
+        src="../../../../assets/images/news_01_01.jpg"
+        alt=""
+        class="news__image"
+      />
     </a>
   </div>
   <div class="news__date">
-    <span class="news__date__day">4</span>
-    <span class="news__date__month">апреля</span>
-    <span class="news__date__year">2021</span>
+    <span>4 апреля 2021</span>
   </div>
   <h2 class="news__title">
     <a href="news1.html">Дата выхода уже скоро?</a>
