--- a/src/app/common/news/news.component.html
+++ b/src/app/common/news/news.component.html
@@ -6,7 +6,13 @@
     <button class="news__button__old">Старые</button>
   </div>
   <div class="news__container__all">
-    <div>
+    <div class="news__container">
+      <app-news-item></app-news-item>
+    </div>
+    <div class="news__container">
+      <app-news-item></app-news-item>
+    </div>
+    <div class="news__container">
       <app-news-item></app-news-item>
     </div>
   </div>
