--- a/src/app/common/wiki/wiki.component.html
+++ b/src/app/common/wiki/wiki.component.html
@@ -2,16 +2,14 @@
   <div class="main__container">
     <h1>Вики</h1>
     <div class="wiki__container">
-      <div class="character__container">
-        <a href="character.html">
-          <span class="wiki__text__link">Персонажи</span>
-        </a>
+      <div class="character__container" (click)="navigateToHeroesPage()">
+        <span class="wiki__text__link">Персонажи</span>
+
         <div class="black-background"></div>
       </div>
-      <div class="item__container">
-        <a href="item.html">
-          <span class="wiki__text__link">Предметы</span>
-        </a>
+      <div class="item__container"  (click)="navigateToItemsPage()">
+        <span class="wiki__text__link">Предметы</span>
+
         <div class="black-background"></div>
       </div>
     </div>
